fixed style issues